--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
      Bulldogge Dumpsters
     </a>
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-     <span class="navbar-toggler-icon">
-     </span>
+     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -57,23 +56,42 @@
   </nav>
   <!-- Page content-->
   <div class="container">
-   <div class="text-center mt-5">
-    <h1>
-     A Bootstrap 5 Starter Template
-    </h1>
-    <p class="lead">
-     A complete project boilerplate built with Bootstrap
-    </p>
-    <p>
-     Bootstrap v5.2.3
-    </p>
-   </div>
+    <div class="my-5" id="hero">
+     <h2 class="text-center">
+      Hero
+     </h2>
+     <p>
+      This is the Hero section. Replace this text with your actual content.
+     </p>
+    </div>
+    <div class="my-5" id="services">
+     <h2 class="text-center">
+      Services
+     </h2>
+     <p>
+      This is the Services section. Replace this text with your actual content.
+     </p>
+    </div>
+    <div class="my-5" id="pricing">
+     <h2 class="text-center">
+      Pricing
+     </h2>
+     <p>
+      This is the Pricing section. Replace this text with your actual content.
+     </p>
+    </div>
+    <div class="my-5" id="contact-us">
+     <h2 class="text-center">
+      Contact Us
+     </h2>
+     <p>
+      This is the Contact Us section. Replace this text with your actual content.
+     </p>
+    </div>
   </div>
   <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="dist/js/scripts.js">
-  </script>
+  <script src="dist/js/scripts.js"></script>
  </body>
 </html>
