--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    Bulldogge Dumpsters
   </title>
   <!-- Favicon-->
-  <link href="assets/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="dist/assets/favicon.ico" rel="icon" type="image/x-icon"/>
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="dist/css/styles.css" rel="stylesheet"/>
  </head>
