--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    Bulldogge Dumpsters
   </title>
   <!-- Favicon-->
-  <link href="dist/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="assets/favicon.ico" rel="icon" type="image/x-icon"/>
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="dist/css/styles.css" rel="stylesheet"/>
  </head>
@@ -68,9 +68,30 @@
      <h2 class="text-center">
       Services
      </h2>
-     <p>
-      This is the Services section. Replace this text with your actual content.
-     </p>
+     <div class="my-4" id="dumpster-rental">
+      <h3>
+       Dumpster Rental
+      </h3>
+      <p>
+       This is the Dumpster Rental service. Replace this text with your actual content.
+      </p>
+     </div>
+     <div class="my-4" id="junk-removal">
+      <h3>
+       Junk Removal
+      </h3>
+      <p>
+       This is the Junk Removal service. Replace this text with your actual content.
+      </p>
+     </div>
+     <div class="my-4" id="portable-toilet-rentals">
+      <h3>
+       Portable Toilet Rentals
+      </h3>
+      <p>
+       This is the Portable Toilet Rentals service. Replace this text with your actual content.
+      </p>
+     </div>
     </div>
     <div class="my-5" id="pricing">
      <h2 class="text-center">
