--- a/index.html
+++ b/index.html
@@ -114,5 +114,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
   <script src="dist/js/scripts.js"></script>
+  <footer>
+   <div class="container text-center py-5">
+    <p>
+     © 2023 Bulldogge Dumpsters
+    </p>
+   </div>
+  </footer>
  </body>
 </html>
