--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    Bulldogge Dumpsters
   </title>
   <!-- Favicon-->
-  <link href="dist/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="assets/favicon.ico" rel="icon" type="image/x-icon"/>
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="dist/css/styles.css" rel="stylesheet"/>
+  <link href="css/styles.css" rel="stylesheet"/>
  </head>
  <body>
   <!-- Responsive navbar-->
@@ -113,7 +113,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="dist/js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
   <footer>
    <div class="container text-center py-5">
     <p>
