--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
      Bulldogge Dumpsters
     </a>
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-     <span class="navbar-toggler-icon"></span>
+     <span class="navbar-toggler-icon">
+     </span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -52,68 +53,118 @@
       </li>
      </ul>
     </div>
+    <div class="my-5" id="testimonials">
+     <h2 class="text-center">
+      Testimonials
+     </h2>
+     <p>
+      This is a testimonial. Replace this text with an actual customer review. - Customer 1
+     </p>
+     <p>
+      This is a testimonial. Replace this text with an actual customer review. - Customer 2
+     </p>
+    </div>
    </div>
   </nav>
   <!-- Page content-->
   <div class="container">
-    <div class="my-5" id="hero">
-     <h2 class="text-center">
-      Hero
-     </h2>
+   <div class="my-5" id="hero">
+    <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
+    <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
+    <h2 class="text-center">
+     Hero
+    </h2>
+    <p>
+     This is the Hero section. Replace this text with your actual content.
+    </p>
+    <button class="btn btn-primary" type="button">
+     Contact Us Now
+    </button>
+    <button class="btn btn-primary" type="button">
+     Contact Us Now
+    </button>
+   </div>
+   <div class="my-5" id="services">
+    <h2 class="text-center">
+     Services
+    </h2>
+    <div class="my-4" id="dumpster-rental">
+     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
+     <h3>
+      Dumpster Rental
+     </h3>
      <p>
-      This is the Hero section. Replace this text with your actual content.
+      This is the Dumpster Rental service. Replace this text with your actual content.
+       This service includes a variety of features and benefits. It's designed to meet all your needs.
      </p>
     </div>
-    <div class="my-5" id="services">
-     <h2 class="text-center">
-      Services
-     </h2>
-     <div class="my-4" id="dumpster-rental">
-      <h3>
-       Dumpster Rental
-      </h3>
-      <p>
-       This is the Dumpster Rental service. Replace this text with your actual content.
-      </p>
-     </div>
-     <div class="my-4" id="junk-removal">
-      <h3>
-       Junk Removal
-      </h3>
-      <p>
-       This is the Junk Removal service. Replace this text with your actual content.
-      </p>
-     </div>
-     <div class="my-4" id="portable-toilet-rentals">
-      <h3>
-       Portable Toilet Rentals
-      </h3>
-      <p>
-       This is the Portable Toilet Rentals service. Replace this text with your actual content.
-      </p>
-     </div>
-    </div>
-    <div class="my-5" id="pricing">
-     <h2 class="text-center">
-      Pricing
-     </h2>
+    <div class="my-4" id="junk-removal">
+     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
+     <h3>
+      Junk Removal
+     </h3>
      <p>
-      This is the Pricing section. Replace this text with your actual content.
+      This is the Junk Removal service. Replace this text with your actual content.
+       This service includes a variety of features and benefits. It's designed to meet all your needs.
      </p>
     </div>
-    <div class="my-5" id="contact-us">
-     <h2 class="text-center">
-      Contact Us
-     </h2>
+    <div class="my-4" id="portable-toilet-rentals">
+     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
+     <h3>
+      Portable Toilet Rentals
+     </h3>
      <p>
-      This is the Contact Us section. Replace this text with your actual content.
+      This is the Portable Toilet Rentals service. Replace this text with your actual content.
+       This service includes a variety of features and benefits. It's designed to meet all your needs.
      </p>
     </div>
+   </div>
+   <div class="my-5" id="pricing">
+    <h2 class="text-center">
+     Pricing
+    </h2>
+    <p>
+     This is the Pricing section. Replace this text with your actual content.
+    </p>
+   </div>
+   <div class="my-5" id="contact-us">
+    <h2 class="text-center">
+     Contact Us
+    </h2>
+    <p>
+     This is the Contact Us section. Replace this text with your actual content.
+    </p>
+    <form>
+     <div class="mb-3">
+      <label class="form-label">
+       Name
+      </label>
+      <input class="form-control" type="text"/>
+     </div>
+     <div class="mb-3">
+      <label class="form-label">
+       Email
+      </label>
+      <input class="form-control" type="text"/>
+     </div>
+     <div class="mb-3">
+      <label class="form-label">
+       Message
+      </label>
+      <textarea class="form-control"></textarea>
+     </div>
+     <button class="btn btn-primary" type="submit">
+      Submit
+     </button>
+    </form>
+   </div>
   </div>
   <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+  </script>
   <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.js">
+  </script>
   <footer>
    <div class="container text-center py-5">
     <p>
