--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
       </li>
      </ul>
     </div>
+   </div>
   </nav>
   <!-- Page content-->
   <div class="container">
+   <!-- This is the Hero section. It contains a call-to-action button and an image. -->
    <div class="my-5" id="hero">
     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
@@ -72,10 +74,12 @@
      Contact Us Now
     </button>
    </div>
+   <!-- This is the Services section. It lists all the services provided by Bulldogge Dumpsters. -->
    <div class="my-5" id="services">
     <h2 class="text-center">
      Services
     </h2>
+    <!-- This is the Dumpster Rental service description. -->
     <div class="my-4" id="dumpster-rental">
      <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
      <h3>
@@ -86,6 +90,7 @@
        This service includes a variety of features and benefits. It's designed to meet all your needs.
      </p>
     </div>
+    <!-- This is the Junk Removal service description. -->
     <div class="my-4" id="junk-removal">
      <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
      <h3>
@@ -96,6 +101,7 @@
        This service includes a variety of features and benefits. It's designed to meet all your needs.
      </p>
     </div>
+    <!-- This is the Portable Toilet Rentals service description. -->
     <div class="my-4" id="portable-toilet-rentals">
      <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
      <h3>
@@ -107,6 +113,7 @@
      </p>
     </div>
    </div>
+   <!-- This is the Pricing section. It provides information about the pricing of the services. -->
    <div class="my-5" id="pricing">
     <h2 class="text-center">
      Pricing
@@ -115,6 +122,7 @@
      This is the Pricing section. Replace this text with your actual content.
     </p>
    </div>
+   <!-- This is the Testimonials section. It contains reviews or testimonials from customers. -->
    <div class="my-5" id="testimonials">
     <h2 class="text-center">
      Testimonials
@@ -127,37 +135,37 @@
     </p>
    </div>
   </div>
-   <div class="my-5" id="contact-us">
-    <h2 class="text-center">
-     Contact Us
-    </h2>
-    <p>
-     This is the Contact Us section. Replace this text with your actual content.
-    </p>
-    <form>
-     <div class="mb-3">
-      <label class="form-label">
-       Name
-      </label>
-      <input class="form-control" type="text"/>
-     </div>
-     <div class="mb-3">
-      <label class="form-label">
-       Email
-      </label>
-      <input class="form-control" type="text"/>
-     </div>
-     <div class="mb-3">
-      <label class="form-label">
-       Message
-      </label>
-      <textarea class="form-control"></textarea>
-     </div>
-     <button class="btn btn-primary" type="submit">
-      Submit
-     </button>
-    </form>
-   </div>
+  <!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
+  <div class="my-5" id="contact-us">
+   <h2 class="text-center">
+    Contact Us
+   </h2>
+   <p>
+    This is the Contact Us section. Replace this text with your actual content.
+   </p>
+   <form>
+    <div class="mb-3">
+     <label class="form-label">
+      Name
+     </label>
+     <input class="form-control" type="text"/>
+    </div>
+    <div class="mb-3">
+     <label class="form-label">
+      Email
+     </label>
+     <input class="form-control" type="text"/>
+    </div>
+    <div class="mb-3">
+     <label class="form-label">
+      Message
+     </label>
+     <textarea class="form-control"></textarea>
+    </div>
+    <button class="btn btn-primary" type="submit">
+     Submit
+    </button>
+   </form>
   </div>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
