--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="" name="description"/>
   <meta content="" name="author"/>
   <title>
-   Bulldogge Dumpsters
+   Bulldogge Dumpsters - Your Premier Waste Management Solution in Boise, ID
   </title>
   <!-- Favicon-->
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon"/>
@@ -17,6 +17,9 @@
   <!-- Responsive navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <div class="container">
+    <div>
+     Welcome to Bulldogge Dumpsters, Boise's trusted partner for all waste management needs. With our commitment to reliability, flexibility, and customer satisfaction, we offer comprehensive solutions for dumpster rental, junk removal, and portable toilet services.
+    </div>
     <a class="navbar-brand" href="#">
      Bulldogge Dumpsters
     </a>
@@ -53,6 +56,12 @@
       </li>
      </ul>
     </div>
+    <div>
+     Ready to simplify your waste management? Book your service with Bulldogge Dumpsters today!
+     <button class="btn btn-primary" type="button">
+      Book Now
+     </button>
+    </div>
    </div>
   </nav>
   <!-- Page content-->
@@ -86,8 +95,7 @@
       Dumpster Rental
      </h3>
      <p>
-      This is the Dumpster Rental service. Replace this text with your actual content.
-       This service includes a variety of features and benefits. It's designed to meet all your needs.
+      Whether you're renovating your home, managing a construction site, or just doing a major clean-up, Bulldogge Dumpsters has you covered. Our dumpster rental services are designed to handle waste disposal needs of any size. With a variety of dumpster sizes and flexible rental periods, we provide solutions tailored to your specific needs. Plus, our transparent pricing means no hidden fees - you only pay for what you need.
      </p>
     </div>
     <!-- This is the Junk Removal service description. -->
@@ -97,8 +105,7 @@
       Junk Removal
      </h3>
      <p>
-      This is the Junk Removal service. Replace this text with your actual content.
-       This service includes a variety of features and benefits. It's designed to meet all your needs.
+      Say goodbye to clutter with Bulldogge Dumpsters' professional junk removal services. Our experienced team handles everything from pick-up to disposal, ensuring a hassle-free experience for you. Whether it's old furniture, electronics, yard waste, or construction debris, we're equipped to handle it all. Let us do the heavy lifting so you can enjoy a cleaner, more spacious environment.
      </p>
     </div>
     <!-- This is the Portable Toilet Rentals service description. -->
@@ -108,8 +115,7 @@
       Portable Toilet Rentals
      </h3>
      <p>
-      This is the Portable Toilet Rentals service. Replace this text with your actual content.
-       This service includes a variety of features and benefits. It's designed to meet all your needs.
+      Hosting an event or running a construction site requires thoughtful planning, and that includes sanitation facilities. At Bulldogge Dumpsters, we offer clean, well-maintained portable toilets that ensure comfort and convenience for your guests or workers. Our units are regularly serviced and come with all necessary amenities, providing a superior sanitation solution.
      </p>
     </div>
    </div>
