--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
   <!-- Responsive navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <div class="container">
-    <div>
-     Welcome to Bulldogge Dumpsters, Boise's trusted partner for all waste management needs. With our commitment to reliability, flexibility, and customer satisfaction, we offer comprehensive solutions for dumpster rental, junk removal, and portable toilet services.
-    </div>
     <a class="navbar-brand" href="#">
      Bulldogge Dumpsters
     </a>
@@ -56,29 +53,19 @@
       </li>
      </ul>
     </div>
-    <div>
-     Ready to simplify your waste management? Book your service with Bulldogge Dumpsters today!
-     <button class="btn btn-primary" type="button">
-      Book Now
-     </button>
-    </div>
    </div>
   </nav>
   <!-- Page content-->
   <div class="container">
    <!-- This is the Hero section. It contains a call-to-action button and an image. -->
    <div class="my-5" id="hero">
-    <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
-    <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
-    <h2 class="text-center">
-     Hero
-    </h2>
-    <p>
-     This is the Hero section. Replace this text with your actual content.
+    <h1 class="text-center">
+     Bulldogge Dumpsters - Your Premier Waste Management Solution in Boise, ID
+    </h1>
+    <p class="text-center">
+     Providing Unmatched Dumpster Rental, Junk Removal, and Portable Toilet Services
     </p>
-    <button class="btn btn-primary" type="button">
-     Contact Us Now
-    </button>
+    <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
     <button class="btn btn-primary" type="button">
      Contact Us Now
     </button>
@@ -90,7 +77,6 @@
     </h2>
     <!-- This is the Dumpster Rental service description. -->
     <div class="my-4" id="dumpster-rental">
-     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
      <h3>
       Dumpster Rental
      </h3>
@@ -100,7 +86,6 @@
     </div>
     <!-- This is the Junk Removal service description. -->
     <div class="my-4" id="junk-removal">
-     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
      <h3>
       Junk Removal
      </h3>
@@ -110,7 +95,6 @@
     </div>
     <!-- This is the Portable Toilet Rentals service description. -->
     <div class="my-4" id="portable-toilet-rentals">
-     <img src="https://via.placeholder.com/150" style="width: 100%; height: auto;"/>
      <h3>
       Portable Toilet Rentals
      </h3>
@@ -146,9 +130,6 @@
    <h2 class="text-center">
     Contact Us
    </h2>
-   <p>
-    This is the Contact Us section. Replace this text with your actual content.
-   </p>
    <form>
     <div class="mb-3">
      <label class="form-label">
