--- a/index.html
+++ b/index.html
@@ -1,116 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Bulldogge Dumpsters - Your Premier Waste Management Solution in Boise, ID</title>
-    <!-- Favicon-->
-    <link href="assets/favicon.ico" rel="icon" type="image/x-icon" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <!-- Responsive navbar-->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#">Bulldogge Dumpsters</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title>Bulldogge Dumpsters - Your Premier Waste Management Solution in Boise, ID</title>
+  <!-- Favicon-->
+  <link href="assets/favicon.ico" rel="icon" type="image/x-icon" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Responsive navbar-->
+  <header class="container">
+    <!-- navigation code here -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <!-- Brand/logo -->
+        <a class="navbar-brand" href="#" rel="home">Bulldogge Dumpsters</a>
+
+        <!-- Navbar toggler button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar collapse section -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <!-- Navbar item list -->
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0" aria-label="Main navigation">
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <!-- Page content-->
-    <main>
-      <section class="container my-5" id="hero">
-        <h1 class="text-center">Bulldogge Dumpsters - Your Premier Waste Management Solution in Boise, ID</h1>
-        <p class="text-center">Providing Unmatched Dumpster Rental, Junk Removal, and Portable Toilet Services</p>
-        <p>Welcome to Bulldogge Dumpsters, Boise's trusted partner for all waste management needs. With our commitment to reliability, flexibility, and customer satisfaction, we offer comprehensive solutions for dumpster rental, junk removal, and portable toilet services.</p>
-        <button class="btn btn-primary" type="button">Book Now</button>
-      </section>
-      <!-- This is the Services section. It lists all the services provided by Bulldogge Dumpsters. -->
-      <section class="container my-5" id="services">
-        <h2 class="text-center">Services</h2>
-        <!-- This is the Dumpster Rental service description. -->
-        <article class="my-4" id="dumpster-rental">
-          <img src="https://via.placeholder.com/150" alt="Dumpster" style="width: 100%; height: auto;" loading="lazy" />
-          <h3>Dumpster Rental</h3>
-          <p>Whether you're renovating your home, managing a construction site, or just doing a major clean-up, Bulldogge Dumpsters has you covered. Our dumpster rental services are designed to handle waste disposal needs of any size. With a variety of dumpster sizes and flexible rental periods, we provide solutions tailored to your specific needs. Plus, our transparent pricing means no hidden fees - you only pay for what you need.</p>
-        </article>
-        <!-- This is the Junk Removal service description. -->
-        <article class="my-4" id="junk-removal">
-          <img src="https://via.placeholder.com/150" alt="Junk removal" style="width: 100%; height: auto;" loading="lazy" />
-          <h3>Junk Removal</h3>
-          <p>Say goodbye to clutter with Bulldogge Dumpsters' professional junk removal services. Our experienced team handles everything from pick-up to disposal, ensuring a hassle-free experience for you. Whether it's old furniture, electronics, yard waste, or construction debris, we're equipped to handle it all. Let us do the heavy lifting so you can enjoy a cleaner, more spacious environment.</p>
-        </article>
-        <!-- This is the Portable Toilet Rentals service description. -->
-        <article class="my-4" id="portable-toilet-rentals">
-          <img src="https://via.placeholder.com/150" alt="Portable toilet" style="width: 100%; height: auto;" loading="lazy" />
-          <h3>Portable Toilet Rentals</h3>
-          <p>Hosting an event or running a construction site requires thoughtful planning, and that includes sanitation facilities. At Bulldogge Dumpsters, we offer clean, well-maintained portable toilets that ensure comfort and convenience for your guests or workers. Our units are regularly serviced and come with all necessary amenities, providing a superior sanitation solution.</p>
-        </article>
-      </section>
-      <!-- This is the Pricing section. It provides information about the pricing of the services. -->
-      <section class="container my-5" id="pricing">
-        <h2 class="text-center">Pricing</h2>
-        <p>This is the Pricing section. Replace this text with your actual content.</p>
-      </section>
-      <!-- This is the Testimonials section. It contains reviews or testimonials from customers. -->
-      <section class="container my-5" id="testimonials">
-        <h2 class="text-center">Testimonials</h2>
-        <p>This is a testimonial. Replace this text with an actual customer review. - Customer 1</p>
-        <p>This is a testimonial. Replace this text with an actual customer review. - Customer 2</p>
-      </section>
-    </main>
-    <!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
-    <section class="container my-5" id="contact-us">
-      <h2 class="text-center">Contact Us</h2>
-      <p>This is the Contact Us section. Replace this text with your actual content.</p>
-      <form>
-        <div class="mb-3">
-          <label class="form-label">Name</label>
-          <input class="form-control" type="text" />
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Email</label>
-          <input class="form-control" type="text" />
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Message</label>
-          <textarea class="form-control"></textarea>
-        </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
-      </form>
-    </section>
-    <!-- Footer-->
-    <footer>
-      <div class="container text-center py-5">
-        <p>© 2023 Bulldogge Dumpsters</p>
       </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-  </body>
+    </nav>
+  </header>
+  <!-- Page content-->
+  <main>
+    <section class="container my-5" id="hero">
+      <h1 class="text-center">Bulldogge Dumpsters - Your Premier Waste Management Solution in Boise, ID</h1>
+      <p class="text-center">Providing Unmatched Dumpster Rental, Junk Removal, and Portable Toilet Services</p>
+      <p>Welcome to Bulldogge Dumpsters, Boise's trusted partner for all waste management needs. With our commitment to
+        reliability, flexibility, and customer satisfaction, we offer comprehensive solutions for dumpster rental, junk
+        removal, and portable toilet services.</p>
+      <button class="btn btn-primary" type="button">Book Now</button>
+    </section>
+    <!-- This is the Services section. It lists all the services provided by Bulldogge Dumpsters. -->
+    <section class="container my-5" id="services">
+      <h2 class="text-center">Services</h2>
+      <!-- This is the Dumpster Rental service description. -->
+      <article class="my-4" id="dumpster-rental">
+        <img src="https://via.placeholder.com/150" alt="Dumpster" style="width: 100%; height: auto;" loading="lazy" />
+        <h3>Dumpster Rental</h3>
+        <p>Whether you're renovating your home, managing a construction site, or just doing a major clean-up, Bulldogge
+          Dumpsters has you covered. Our dumpster rental services are designed to handle waste disposal needs of any
+          size. With a variety of dumpster sizes and flexible rental periods, we provide solutions tailored to your
+          specific needs. Plus, our transparent pricing means no hidden fees - you only pay for what you need.</p>
+      </article>
+      <!-- This is the Junk Removal service description. -->
+      <article class="my-4" id="junk-removal">
+        <img src="https://via.placeholder.com/150" alt="Junk removal" style="width: 100%; height: auto;"
+          loading="lazy" />
+        <h3>Junk Removal</h3>
+        <p>Say goodbye to clutter with Bulldogge Dumpsters' professional junk removal services. Our experienced team
+          handles everything from pick-up to disposal, ensuring a hassle-free experience for you. Whether it's old
+          furniture, electronics, yard waste, or construction debris, we're equipped to handle it all. Let us do the
+          heavy lifting so you can enjoy a cleaner, more spacious environment.</p>
+      </article>
+      <!-- This is the Portable Toilet Rentals service description. -->
+      <article class="my-4" id="portable-toilet-rentals">
+        <img src="https://via.placeholder.com/150" alt="Portable toilet" style="width: 100%; height: auto;"
+          loading="lazy" />
+        <h3>Portable Toilet Rentals</h3>
+        <p>Hosting an event or running a construction site requires thoughtful planning, and that includes sanitation
+          facilities. At Bulldogge Dumpsters, we offer clean, well-maintained portable toilets that ensure comfort and
+          convenience for your guests or workers. Our units are regularly serviced and come with all necessary
+          amenities, providing a superior sanitation solution.</p>
+      </article>
+    </section>
+    <!-- This is the Pricing section. It provides information about the pricing of the services. -->
+    <section class="container my-5" id="pricing">
+      <h2 class="text-center">Pricing</h2>
+      <p>This is the Pricing section. Replace this text with your actual content.</p>
+    </section>
+    <!-- This is the Testimonials section. It contains reviews or testimonials from customers. -->
+    <section class="container my-5" id="testimonials">
+      <h2 class="text-center">Testimonials</h2>
+      <p>This is a testimonial. Replace this text with an actual customer review. - Customer 1</p>
+      <p>This is a testimonial. Replace this text with an actual customer review. - Customer 2</p>
+    </section>
+  </main>
+  <!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
+  <section class="container my-5" id="contact-us">
+    <h2 class="text-center">Contact Us</h2>
+    <p>This is the Contact Us section. Replace this text with your actual content.</p>
+    <form>
+      <div class="mb-3">
+        <label class="form-label">Name</label>
+        <input class="form-control" type="text" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input class="form-control" type="text" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Message</label>
+        <textarea class="form-control"></textarea>
+      </div>
+      <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+  </section>
+  <!-- Footer-->
+  <footer>
+    <div class="container text-center py-5">
+      <p>© 2023 Bulldogge Dumpsters</p>
+    </div>
+  </footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
