update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Favicon-->
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="css/styles.css" rel="stylesheet" />
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -90,12 +90,27 @@
       <h2 class="text-center">Pricing</h2>
       <p>This is the Pricing section. Replace this text with your actual content.</p>
     </section>
-    <!-- This is the Testimonials section. It contains reviews or testimonials from customers. -->
-    <section class="container my-5" id="testimonials">
-      <h2 class="text-center">Testimonials</h2>
-      <p>This is a testimonial. Replace this text with an actual customer review. - Customer 1</p>
-      <p>This is a testimonial. Replace this text with an actual customer review. - Customer 2</p>
-    </section>
+<!-- Testimonials section with container class and a unique ID -->
+<section class="container my-5" id="testimonials">
+  <!-- Heading for testimonials section -->
+  <h2 class="text-center">Testimonials</h2>
+  
+  <!-- First testimonial block -->
+  <blockquote>
+    <!-- Placeholder content for first testimonial -->
+    This is a testimonial. Replace this text with an actual customer review. - 
+    <!-- Name of the first customer -->
+    <cite>Customer 1</cite>
+  </blockquote>
+  
+  <!-- Second testimonial block -->
+  <blockquote>
+    <!-- Placeholder content for second testimonial -->
+    This is a testimonial. Replace this text with an actual customer review. - 
+    <!-- Name of the second customer -->
+    <cite>Customer 2</cite>
+  </blockquote>
+</section>
   </main>
 <!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
 <section id="contact-us">
