--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" async></script>
 
 <!-- Core theme JS - async script loading -->
-<script src="js/scripts.js" async></script>
+<script src="js/main.js" async></script>
 </body>
 
 </html>
