--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Favicon-->
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon" />
   <!-- Core theme CSS (includes Bootstrap)-->
-<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -90,57 +90,60 @@
       <h2 class="text-center">Pricing</h2>
       <p>This is the Pricing section. Replace this text with your actual content.</p>
     </section>
-<!-- Testimonials section with container class and a unique ID -->
-<section class="container my-5" id="testimonials">
-  <!-- Heading for testimonials section -->
-  <h2 class="text-center">Testimonials</h2>
-  
-  <!-- First testimonial block -->
-  <blockquote>
-    <!-- Placeholder content for first testimonial -->
-    This is a testimonial. Replace this text with an actual customer review. - 
-    <!-- Name of the first customer -->
-    <cite>Customer 1</cite>
-  </blockquote>
-  
-  <!-- Second testimonial block -->
-  <blockquote>
-    <!-- Placeholder content for second testimonial -->
-    This is a testimonial. Replace this text with an actual customer review. - 
-    <!-- Name of the second customer -->
-    <cite>Customer 2</cite>
-  </blockquote>
-</section>
-  </main>
-<!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
-<section id="contact-us">
-  <h2 class="text-center">Contact Us</h2> <!-- Heading for the Contact Us section -->
-  <form method="POST"> <!-- Form for sending a message, using the POST method -->
-    <div class="mb-3">
-      <label for="name" class="form-label">Name:</label> <!-- Label for the Name input field -->
-      <input type="text" id="name" class="form-control" required autocomplete="name"/> <!-- Input field for the user's name -->
-    </div>
-    <div class="mb-3">
-      <label for="email" class="form-label">Email:</label> <!-- Label for the Email input field -->
-      <input type="email" id="email" class="form-control" required autocomplete="email"/> <!-- Input field for the user's email -->
-    </div>
-    <div class="mb-3">
-      <label for="message" class="form-label">Message:</label> <!-- Label for the Message textarea field -->
-      <textarea id="message" class="form-control" required autocomplete="message"></textarea> <!-- Textarea field for the user's message -->
-    </div>
-    <button class="btn btn-primary" type="submit">Submit</button> <!-- Submit button for submitting the form -->
-  </form>
-</section>
-<!-- Footer section -->
-<footer class="container text-center py-5">
-  <!-- Copyright statement -->
-  <p>© 2023 Bulldogge Dumpsters</p>
-</footer>
-<!-- Bootstrap core JS - async script loading -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" async></script>
+    <!-- Testimonials section with container class and a unique ID -->
+    <section class="container my-5" id="testimonials">
+      <!-- Heading for testimonials section -->
+      <h2 class="text-center">Testimonials</h2>
 
-<!-- Core theme JS - async script loading -->
-<script src="js/main.js" async></script>
+      <!-- First testimonial block -->
+      <blockquote>
+        <!-- Placeholder content for first testimonial -->
+        This is a testimonial. Replace this text with an actual customer review. -
+        <!-- Name of the first customer -->
+        <cite>Customer 1</cite>
+      </blockquote>
+
+      <!-- Second testimonial block -->
+      <blockquote>
+        <!-- Placeholder content for second testimonial -->
+        This is a testimonial. Replace this text with an actual customer review. -
+        <!-- Name of the second customer -->
+        <cite>Customer 2</cite>
+      </blockquote>
+    </section>
+  </main>
+  <!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
+  <section id="contact-us">
+    <h2 class="text-center">Contact Us</h2> <!-- Heading for the Contact Us section -->
+    <form method="POST"> <!-- Form for sending a message, using the POST method -->
+      <div class="mb-3">
+        <label for="name" class="form-label">Name:</label> <!-- Label for the Name input field -->
+        <input type="text" id="name" class="form-control" required autocomplete="name" />
+        <!-- Input field for the user's name -->
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email:</label> <!-- Label for the Email input field -->
+        <input type="email" id="email" class="form-control" required autocomplete="email" />
+        <!-- Input field for the user's email -->
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Message:</label> <!-- Label for the Message textarea field -->
+        <textarea id="message" class="form-control" required autocomplete="message"></textarea>
+        <!-- Textarea field for the user's message -->
+      </div>
+      <button class="btn btn-primary" type="submit">Submit</button> <!-- Submit button for submitting the form -->
+    </form>
+  </section>
+  <!-- Footer section -->
+  <footer class="container text-center py-5">
+    <!-- Copyright statement -->
+    <p>© 2023 Bulldogge Dumpsters</p>
+  </footer>
+  <!-- Bootstrap core JS - async script loading -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" async></script>
+
+  <!-- Core theme JS - async script loading -->
+  <script src="js/main.js" async></script>
 </body>
 
 </html>
