--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Favicon-->
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
