update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -44,40 +44,53 @@
   </header>
   <!-- Page content-->
   <main>
-    <section class="container my-5" id="hero">
+    <!-- The header element represents a container for introductory content -->
+    <header class="container my-5" id="hero">
+
+      <!-- The h1 element represents the heading of the hero section, with text centered -->
       <h1 class="text-center">Bulldogge Dumpsters - Your Premier Waste Management Solution in Boise, ID</h1>
+
+      <!-- The p element represents a paragraph of text, with text centered -->
       <p class="text-center">Providing Unmatched Dumpster Rental, Junk Removal, and Portable Toilet Services</p>
+
+      <!-- This paragraph provides additional information about Bulldogge Dumpsters -->
       <p>Welcome to Bulldogge Dumpsters, Boise's trusted partner for all waste management needs. With our commitment to
         reliability, flexibility, and customer satisfaction, we offer comprehensive solutions for dumpster rental, junk
         removal, and portable toilet services.</p>
+
+      <!-- The button element represents a clickable button -->
       <button class="btn btn-primary" type="button">Book Now</button>
-    </section>
+
+    </header>
     <!-- This is the Services section. It lists all the services provided by Bulldogge Dumpsters. -->
     <section class="container my-5" id="services">
+
+      <!-- The heading for the Services section -->
       <h2 class="text-center">Services</h2>
+
       <!-- This is the Dumpster Rental service description. -->
       <article class="my-4" id="dumpster-rental">
-        <img src="https://via.placeholder.com/150" alt="Dumpster" style="width: 100%; height: auto;" loading="lazy" />
+        <img src="https://via.placeholder.com/150" alt="Dumpster" class="service-image" loading="lazy" />
         <h3>Dumpster Rental</h3>
         <p>Whether you're renovating your home, managing a construction site, or just doing a major clean-up, Bulldogge
           Dumpsters has you covered. Our dumpster rental services are designed to handle waste disposal needs of any
           size. With a variety of dumpster sizes and flexible rental periods, we provide solutions tailored to your
           specific needs. Plus, our transparent pricing means no hidden fees - you only pay for what you need.</p>
       </article>
+
       <!-- This is the Junk Removal service description. -->
       <article class="my-4" id="junk-removal">
-        <img src="https://via.placeholder.com/150" alt="Junk removal" style="width: 100%; height: auto;"
-          loading="lazy" />
+        <img src="https://via.placeholder.com/150" alt="Junk removal" class="service-image" loading="lazy" />
         <h3>Junk Removal</h3>
         <p>Say goodbye to clutter with Bulldogge Dumpsters' professional junk removal services. Our experienced team
           handles everything from pick-up to disposal, ensuring a hassle-free experience for you. Whether it's old
           furniture, electronics, yard waste, or construction debris, we're equipped to handle it all. Let us do the
           heavy lifting so you can enjoy a cleaner, more spacious environment.</p>
       </article>
+
       <!-- This is the Portable Toilet Rentals service description. -->
       <article class="my-4" id="portable-toilet-rentals">
-        <img src="https://via.placeholder.com/150" alt="Portable toilet" style="width: 100%; height: auto;"
-          loading="lazy" />
+        <img src="https://via.placeholder.com/150" alt="Portable toilet" class="service-image" loading="lazy" />
         <h3>Portable Toilet Rentals</h3>
         <p>Hosting an event or running a construction site requires thoughtful planning, and that includes sanitation
           facilities. At Bulldogge Dumpsters, we offer clean, well-maintained portable toilets that ensure comfort and
