--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 </head>
 
 <body>
@@ -98,31 +100,48 @@
           amenities, providing a superior sanitation solution.</p>
       </article>
     </section>
-    <!-- This is the Pricing section. It provides information about the pricing of the services. -->
+    <!-- Pricing Section -->
     <section class="container my-5" id="pricing">
       <h2 class="text-center">Pricing</h2>
-      <p>This is the Pricing section. Replace this text with your actual content.</p>
+      <p>Add your pricing content here.</p>
     </section>
     <!-- Testimonials section with container class and a unique ID -->
     <section class="container my-5" id="testimonials">
       <!-- Heading for testimonials section -->
       <h2 class="text-center">Testimonials</h2>
 
-      <!-- First testimonial block -->
-      <blockquote>
-        <!-- Placeholder content for first testimonial -->
-        This is a testimonial. Replace this text with an actual customer review. -
-        <!-- Name of the first customer -->
-        <cite>Customer 1</cite>
-      </blockquote>
+      <!-- Testimonials Slider -->
+      <div class="owl-carousel owl-theme">
+        <!-- First testimonial block -->
+        <div class="item">
+          <blockquote>
+            <!-- Placeholder content for first testimonial -->
+            This is a testimonial. Replace this text with an actual customer review. -
+            <!-- Name of the first customer -->
+            <cite>Customer 1</cite>
+          </blockquote>
+        </div>
 
-      <!-- Second testimonial block -->
-      <blockquote>
-        <!-- Placeholder content for second testimonial -->
-        This is a testimonial. Replace this text with an actual customer review. -
-        <!-- Name of the second customer -->
-        <cite>Customer 2</cite>
-      </blockquote>
+        <!-- Second testimonial block -->
+        <div class="item">
+          <blockquote>
+            <!-- Placeholder content for second testimonial -->
+            This is a testimonial. Replace this text with an actual customer review. -
+            <!-- Name of the second customer -->
+            <cite>Customer 2</cite>
+          </blockquote>
+        </div>
+
+        <!-- Third testimonial block -->
+        <div class="item">
+          <blockquote>
+            <!-- Placeholder content for third testimonial -->
+            This is a testimonial. Replace this text with an actual customer review. -
+            <!-- Name of the third customer -->
+            <cite>Customer 3</cite>
+          </blockquote>
+        </div>
+      </div>
     </section>
   </main>
   <!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
