--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
 
   <!-- Core theme JS - async script loading -->
   <script src="js/main.js" async></script>
+  <script src="scripts/jquery.min.js"></script>
+  <script src="owlcarousel/owl.carousel.min.js"></script>
 </body>
 
 </html>
