--- a/index.html
+++ b/index.html
@@ -145,6 +145,34 @@
       </div>
     </section>
   </main>
+<main class="container my-5" id="blog-preview">
+  <!-- Main container for the blog preview section -->
+  <h3 class="text-center">From The Blog</h3>
+
+  <article class="blog-post my-4" id="blog-post-1" data-summary="This is a summary of the blog post 1">
+    <!-- First blog post -->
+    <img src="https://via.placeholder.com/150" alt="Image for Blog Post 1" class="blog-post-image" loading="lazy" />
+    <!-- Image for the first blog post -->
+    <h3>Blog Post Title 1</h3>
+    <!-- Title of the first blog post -->
+    <p>This is a summary of the first blog post. Replace this text with an actual summary.</p>
+    <!-- Summary of the first blog post -->
+    <a href="https://example.com/blog-post-1" class="read-more-link">Read More</a>
+    <!-- Link to read more about the first blog post -->
+  </article>
+
+  <article class="blog-post my-4" id="blog-post-2" data-summary="This is a summary of the blog post 2">
+    <!-- Second blog post -->
+    <img src="https://via.placeholder.com/150" alt="Image for Blog Post 2" class="blog-post-image" loading="lazy" />
+    <!-- Image for the second blog post -->
+    <h3>Blog Post Title 2</h3>
+    <!-- Title of the second blog post -->
+    <p>This is a summary of the second blog post. Replace this text with an actual summary.</p>
+    <!-- Summary of the second blog post -->
+    <a href="https://example.com/blog-post-2" class="read-more-link">Read More</a>
+    <!-- Link to read more about the second blog post -->
+  </article>
+</main>
   <!-- This is the Contact Us section. It contains a form for visitors to send a message. -->
   <section id="contact-us">
     <h2 class="text-center">Contact Us</h2> <!-- Heading for the Contact Us section -->
